# emoji

./: .gitignore  .pre-commit-config.yaml  README.md  emoji.py  emoji_regex.py  emoji_regex_prepare.py  pyproject.toml
.github/: publish.yaml
.github/workflows/: publish.yaml  run_test.yaml
emoji_regex/: __init__.py
tests/: test_emoji_regex.py
